# HSE-CPP-game-project

./: .clang-format  0-lobby-level.txt  1-forest-level.txt  1-level-forest.txt  2-dungeon-level.txt  CMakeLists.txt  GEOMETRY.md  Level_maker.md  README.md  TIME.md  assert.h  assert.hpp  empty_level.txt  emtpy_level.txt  example_level.txt  game_mode.hpp  global_variables.hpp  level.txt  level_maker_main.cpp  main.cpp  main_header.hpp  move.h  objects.hpp  render.hpp  singleplayer_main.cpp  sprites.cpp  sprites.hpp  utils.cpp  utils.h  utils.hpp  win32_platform.cpp  window_handler.hpp
Audio/: audio.cpp  audio.hpp
Documentation/: ASSERT.md  GEOMETRY.md  TIME.md  UTILS.md
Game/: bullet.h  game.cpp  game_collision.cpp  game_utils.cpp  level_maker.cpp
Game/Game objects/: abstract_game_object.h  abstract_game_object.hpp  abstract_object.hpp  abstract_physical_object.hpp  bat.cpp  bat.hpp  bomber.hpp  bullet.cpp  bullet.hpp  bush.cpp  bush.hpp  button.hpp  cursor.hpp  effect.cpp  effect.hpp  enemy_states.hpp  fireplace.cpp  fireplace.hpp  forward_heart_and_coin.hpp  game_collision.hpp  game_objects.cpp  game_objects.hpp  game_utils.hpp  heart&coin.hpp  heart.cpp  heart.hpp  heart_and_coin.hpp  log.cpp  log.hpp  loot.cpp  loot.hpp  menu.hpp  mini_slime.hpp  mob.hpp  player.cpp  player.hpp  rain.cpp  room.cpp  room.hpp  shooting_mob.hpp  (+8 more)
Game/Game_objects/: abstract_object.cpp  abstract_object.hpp  abstract_physical_object.cpp  abstract_physical_object.hpp  barrel.cpp  barrel.hpp  bat.cpp  bat.hpp  bomber.cpp  bomber.hpp  bullet.cpp  bullet.hpp  bush.cpp  bush.hpp  button.cpp  button.hpp  cursor.cpp  cursor.hpp  effect.cpp  effect.hpp  forward_heart_and_coin.hpp  game_collision.cpp  game_collision.hpp  game_objects.hpp  game_utils.hpp  game_variables.hpp  heart_and_coin.cpp  heart_and_coin.hpp  knight.cpp  knight.hpp  log.cpp  log.hpp  loot.cpp  loot.hpp  menu.hpp  mob.cpp  mob.hpp  nun_statue.cpp  nun_statue.hpp  pillar.cpp  (+14 more)
Game/Level maker/: level_maker.cpp
Game/UI Objects/: button.cpp  mouse.cpp  ui_objects.cpp  ui_state.cpp
Multiplayer/: client.cpp  client_main.cpp  game_message.hpp  server_main.cpp
Objects/: button.hpp  camera.cpp  camera.h  camera.hpp  collision.cpp  collision.h  collision.hpp  cursor.hpp  engine_state.h  matrix.h  matrix.hpp  move.cpp  move.h  move.hpp  objects.h  objects.hpp  platform_common.cpp  platform_common.h  platform_common.hpp  quad_tree_render.h  render_state.cpp  render_state.h  render_state.hpp  time.cpp  time.h  time.hpp  typer.cpp  typer.hpp
Objects/Geometry/: circle.cpp  circle.h  circle.hpp  dot.cpp  dot.h  dot.hpp  geometry.h  geometry.hpp  geometry_utils.h  geometry_utils.hpp  line.cpp  line.h  line.hpp
Objects/Sprite/: color.cpp  color.h  color.hpp  png.cpp  png.h  sprite.h  sprite_object.cpp  sprite_object.hpp
Render/: animation.cpp  animation.hpp  basic_render.cpp  basic_render.hpp  letters.cpp  multi_threaded_render.cpp  multi_threaded_render_unused_need_to_rebuild.cpp  render.cpp  render_geometry.cpp  render_geometry.hpp  render_object.cpp  render_object.hpp  render_objects.cpp  render_phenomen.cpp  render_sprite.cpp  render_sprite.hpp  render_text.cpp  render_text.hpp  render_utils.cpp  render_utils.hpp
Serialize/: container_traits.hpp  serialize.hpp
Sprites/: sprite.cpp  sprite.hpp  sprites.hpp
Sprites/Enemies/: slime.eng
Sprites/Shadows/: slime_large_shadow.eng  slime_medium_shadow.eng
Sprites/UI/: cursor.eng  focus_cursor.eng
